# llvm-cudarrays

./: CMakeLists.txt  Makefile  Makefile.common.in  Makefile.llvm.config.in  Makefile.llvm.rules  configure
autoconf/: AutoRegen.sh  configure.ac
lib/: Makefile
lib/CUDAToScalar/: GenScalar.cpp  Makefile
lib/Delinear/: CUDArraysDriver.cpp  CUDArraysDriver.h  CUDArraysRTDriver.cpp  CUDArraysRTDriver.h  ChicagoDLT.cpp  DbgLinePrinter.cpp  DbgLinePrinter.h  Delinear.cpp  GetNonUnitStride.cpp  GetNonUnitStride.h  Makefile  StridePrinter.cpp
scripts/: nvcc-ir
test/CUDAToScalar/: Makefile  convolution2d.ll  fft.ll  matrixmul.ll  matrixvec.ll  reduction.ll  saxpy.ll  sort.ll  spmv_csr.ll  spmv_ell.ll  spmv_jds.ll  stencil2d.ll  stencil3d.ll  transpose.ll  vecadd.ll
test/Delinear/: Makefile  benchmarks-50.bc  benchmarks-55.bc  benchmarks.bc  blackscholes.c  convolution2d.ll  cutcp_kernel.cl  fft.ll  histo_final.cl  histo_intermediates.cl  histo_main.cl  histo_prescan.cl  matrixmul.ll  matrixvec.ll  mri-gridding_GPU_kernels.cl  mri-gridding_scanLargeArray.cl  reduction.ll  sad_kernel.cl  saxpy.ll  sort.ll  spmv_csr.ll  spmv_ell.ll  spmv_jds.ll  stencil2d.ll  stencil3d.ll  tpacf_kernel.cl  transpose.ll  vecadd.ll
tools/: CMakeLists.txt  Makefile
tools/CUDArraysInst/: ArrayInst.cpp  Makefile
